Fixed button overflow issue

--- a/styles/main.css
+++ b/styles/main.css
@@ -185,7 +185,6 @@ body {
 #pageContent {
     margin-top: 20px;
     margin-bottom: 20px;
-    overflow:hidden;
     padding-bottom: 60px;
 }
 
